Switching to simpler stuff for a bit

--- a/HadoopTutorial/tutorial/index.html
+++ b/HadoopTutorial/tutorial/index.html
@@ -27,7 +27,7 @@ Site design help from: https://designmodo.com/bootstrap-4-tutorial/ -->
 <div class="parallax text-center" style="background-image: url(img/cover.jpg);">
 <div class="parallax-pattern-overlay">
 <div class="container text-center" style="height:580px;padding-top:170px;">
-<a href="#"><img id="site-title" src="https://static-www.elastic.co/assets/blt392eab2043e433d4/icon-es-hadoop-bb.svg?q=456" alt="logo"/></a>
+<a href="#"><img id="site-title" src="img/elephant.png" alt="elephant"/></a>
 <h2 class="display-2">Hadoop!</h2>
 <h3 class="learn">For beginners</h3>
 </div>
@@ -36,6 +36,12 @@ Site design help from: https://designmodo.com/bootstrap-4-tutorial/ -->
 </header>
 <!-- about -->
 <section class="aboutus" id="aboutus">
+<div class="heading text-center">
+<img class="dividerline" src="img/sep.png" alt="">
+<h2>What's Hadoop?</h2>
+<img class="dividerline" src="img/sep.png" alt="">
+<h3><mark>Hadoop</mark> is --- lorem ipsum information!!!.</h3>
+</div>
 <div class="container">
 <div class="row">
 <div class="col-lg-12">
