--- a/HadoopTutorial/tutorial/index.html
+++ b/HadoopTutorial/tutorial/index.html
@@ -1,101 +1,132 @@
 <!-- DOCTYPE -->
 <!-- CS 496 How-To: A Hadoop Tutorial
-Site design help from: https://designmodo.com/bootstrap-4-tutorial/ -->
+Site design help from:
+https://designmodo.com/bootstrap-4-tutorial/
+https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
 <!DOCTYPE html>
-<head>
-<title>Hadoop - Tutorial</title>
-<meta charset="utf-8">
-<meta name="author" content="Kendra Swafford">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/custom.css">
-<!-- Fonts -->
-<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600,700,900' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-</head>
-<!-- Content! -->
-<body>
-<!-- Wrapper begins here -->
-<div class="wrapper" id="wrapper">
-<!-- header - jumbotron provides large banner with big text and a border -->
-<header>
-<div class="jumbotron jumbotron-fluid" id="banner">       
-<div class="parallax text-center" style="background-image: url(img/cover.jpg);">
-<div class="parallax-pattern-overlay">
-<div class="container text-center" style="height:580px;padding-top:170px;">
-<a href="#"><img id="site-title" src="img/elephant.png" alt="elephant"/></a>
-<h2 class="display-2">Hadoop!</h2>
-<h3 class="learn">For beginners</h3>
-</div>
-</div>
-</div>
-</header>
-<!-- about -->
-<section class="aboutus" id="aboutus">
-<div class="heading text-center">
-<img class="dividerline" src="img/sep.png" alt="">
-<h2>What's Hadoop?</h2>
-<img class="dividerline" src="img/sep.png" alt="">
-<h3><mark>Hadoop</mark> is --- lorem ipsum information!!!.</h3>
-</div>
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-</div>
-</div>
-<div class="row">
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
-</div>
-<div class="col-md-3">
-</div>
-</div>
-</div>
-</section>
-<!--features section-->
-<section class="features" id="features">
-<div class="container">
-<div class="row">
-<div class="col-md-6">
-</div>
-</div>
-<div class="row">
-<div class="col-md-6">
-</div>
-</div>
-</div>
-</section>
-<!--contact-->
-<section class="contact" id="contact">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-</div>
-</div>
-</div>
-</section>
-<!--footer-->
-<section class="footer" id="footer">
-<div class="container">
-<div class="row">
-<div class="col-lg-12">
-</div>
-</div>
-</div>
-</div>
-</section>
-</div>
-<!-- Wrapper ends here -->
+<html lang="en">
 
-<!-- JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="CS 496 How-To: A Hadoop Tutorial">
+    <meta name="author" content="Kendra Swafford">
+
+    <title>Hadoop How-To</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Section -->
+    <section id="intro" class="intro-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Scrolling Nav</h1>
+                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
+                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>About Section</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Services Section</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Contact Section</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Scrolling Nav JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+
 </body>
+
 </html>
