--- a/HadoopTutorial/tutorial/index.html
+++ b/HadoopTutorial/tutorial/index.html
@@ -45,7 +45,7 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Getting Started With Hadoop</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,13 +56,16 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Getting setup1</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Getting setup2</a>
+                    </li>
+					<li>
+                        <a class="page-scroll" href="#services">Getting setup2</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Sources</a>
                     </li>
                 </ul>
             </div>
@@ -76,9 +79,9 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Scrolling Nav</h1>
-                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
+                    <h1>What's Hadoop?</h1>
+                    <p><strong>Hadoop</strong> is a lorem ipsum <code>example.js</code> and <code>example.java</code> files. Check out link.</p>
+                    <a class="btn btn-default page-scroll" href="#about">Let's get started!</a>
                 </div>
             </div>
         </div>
