--- a/HadoopTutorial/tutorial/index.html
+++ b/HadoopTutorial/tutorial/index.html
@@ -1,4 +1,4 @@
-<!-- DOCTYPE -->
+﻿<!-- DOCTYPE -->
 <!-- CS 496 How-To: A Hadoop Tutorial
 Site design help from:
 https://designmodo.com/bootstrap-4-tutorial/
@@ -56,7 +56,7 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Getting setup1</a>
+                        <a class="page-scroll" href="#setup1">Getting setup1</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Getting setup2</a>
@@ -65,7 +65,10 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
                         <a class="page-scroll" href="#services">Getting setup2</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Sources</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#resources">Resources</a>
                     </li>
                 </ul>
             </div>
@@ -87,12 +90,12 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about-section">
+    <!-- Setup Section -->
+    <section id="setup1" class="setup-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>About Section</h1>
+                    <h1>Setting Up</h1>
                 </div>
             </div>
         </div>
@@ -115,6 +118,17 @@ https://blackrockdigital.github.io/startbootstrap-scrolling-nav/ -->
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Contact Section</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Resources Section -->
+    <section id="resources" class="resources-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1>Resources Section</h1>
                 </div>
             </div>
         </div>
